# 18646_TermProject

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README  README.md  conanfile.txt
cmake/: conan.cmake  wilkes_utils.cmake
custom_kernel_implementation/: 1  Makefile  a.out  ced_disass  ced_stages345.c  ced_stages_345.c  conv.c  conv2.c  conv_kernel_2_stages.c  conv_kernel_2_stages.x  dummy.c  get_img_rc.h  image_read.cpp  image_read.x  image_write.cpp  image_write.x  output.csv  output_dnew.csv  output_dnew_temp.csv  output_final.csv  output_theox.csv  output_theoy.csv  output_theta.csv  output_theta_new_temp.csv  output_thresh.csv  output_x.csv  output_y.csv  outputx.csv  outputy.csv  show_image.py  test.csv
opencv_seq_implementation/: CannyEdgeDetector.cpp  CannyEdgeDetector.h  README.txt  a.out  compile  main.cpp
wilkes/: CMakeLists.txt
wilkes/custom_kernel_implementation/: CMakeLists.txt  Makefile  README  README.md  ced_disass  ced_stages345.c  ced_stages345.h  conv.c  conv.h  conv2.c  conv2.h  conv_kernel_2_stages.c  conv_kernel_2_stages.h  dummy.c  get_img_rc.c  get_img_rc.h  globals.c  globals.h  image_read.cpp  image_write.cpp  main.c
wilkes/custom_kernel_implementation/data/: output_dnew.csv  output_theo.csv
wilkes/opencv_seq_implementation/: CMakeLists.txt  CannyEdgeDetector.cpp  CannyEdgeDetector.h  Makefile  README.md  main.cpp
